[package]
name = "marabunta"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", default-features = false, features = [
    "animation",
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_sprite",
    "bevy_sprite_picking_backend",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "default_font",
    "hdr",
    "multi_threaded",
    "png",
    "serialize",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
]}
bevy_kira_audio = "0.22.0"
bevy_renet = "1.0.0"
bincode = "1.3.3"
image = "0.25.5"
rand = "0.9.0"
regex = "1.11.1"
rfd = "0.15.3"
serde = "1.0.219"
strum = "0.27.1"
strum_macros = "0.27.1"
pathfinding = "4.14.0"
uuid = { version = "1.12.1", features = ["v4"] }
winit = "0.30.9"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
